2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* po/ru.po: Updated to 399t. Thanks to Yuri Kozlov <kozlov.y@gmail.com>.
	* man/po/ru.po: Updated to 757t. Thanks also to Yuri Kozlov
	<kozlov.y@gmail.com>.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/Makefile.am: Add support for conditionally including
	paragraphs. (e.g. to support the documentation of PAM and !PAM
	features).

2007-11-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml: Added /etc/gshadow, /etc/group, /etc/shadow,
	and /etc/passwd to section FILES.
	* man/newusers.8.xml: Mentions that PAM is not used to set the
	passwords.
	* man/chpasswd.8.xml: Added section FILES (/etc/passwd,
	/etc/shadow, /etc/login.defs).
	* man/chpasswd.8.xml: Use the same paragraph as in newusers.8.xml
	to indicate that PAM is not used.
	* man/chgpasswd.8.xml: Added section FILES (/etc/group,
	/etc/gshadow, /etc/login.defs).

2007-11-21  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Try harder to get the GID equal to the UID.
	This was not the case when the GID is not specified, and a GID
	exist with an ID higher than the all the UIDs.
	* src/newusers.c: Typo in comment: contrained -> constrained.

2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c: If the shadow group file is not present, do not
	try to locate the group entry from /etc/gshadow, and set the
	password in /etc/group.

2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/obscure.c, libmisc/salt.c, src/passwd.c: Match DES, MD5,
	SHA256, and SHA512 exactly (not only the first 3/6 chars).
	* libmisc/salt.c (SHA_salt_rounds): Set rounds to the specified
	prefered_rounds value, if specified.
	* src/gpasswd.c, libmisc/salt.c: Fix compilation warnings (use
	size_t for lengths).
	* src/chpasswd.c, src/chgpasswd.c: Add missing parenthesis.

2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>
